--- a/project/config.toml
+++ b/project/config.toml
@@ -1,4 +1,4 @@
-baseurl = "/"
+baseurl = "http://localhost:1313"
 title = "Mainroad"
 languageCode = "en-us"
 paginate = "10" # Number of posts per page
