--- a/project/config.toml
+++ b/project/config.toml
@@ -1,5 +1,5 @@
 baseurl = "http://localhost:1313"
-title = "Mainroad"
+title = "Redowan's Musings"
 languageCode = "en-us"
 paginate = "10" # Number of posts per page
 theme = "mainroad"
