--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "project/themes/mainroad"]
-	path = project/themes/mainroad
+[submodule "themes/mainroad"]
+	path = themes/mainroad
 	url = https://github.com/vimux/mainroad
