--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,13 +20,6 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "requirements.txt" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
       - run:
           name: install dependencies
           command: |
@@ -40,6 +33,12 @@ jobs:
 
             # installing hugo
             brew install hugo
+
+      - run:
+          name: github setup
+          command: |
+            git config --global user.email "redowan.nafi@gmail.com"
+            git config --global user.name "rednafi"
 
       - run:
           name: deployment
