--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,10 @@ jobs:
             git config --global user.email "redowan.nafi@gmail.com"
             git config --global user.name "rednafi"
 
+      - add_ssh_keys:
+          fingerprints:
+            - "b7:35:a6:4e:9b:0d:6d:d4:78:1e:9a:97:2a:66:6b:be"
+
       - run:
           name: deployment
           command: |
