--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "themes/even"]
-	path = themes/even
-	url = https://github.com/olOwOlo/hugo-theme-even
+# [submodule "themes/even"]
+# 	path = themes/even
+# 	url = https://github.com/olOwOlo/hugo-theme-even
 
-[submodule "themes/hugo-search-fuse-js"]
-	path = themes/hugo-search-fuse-js
-	url = https://github.com/kaushalmodi/hugo-search-fuse-js
+# [submodule "themes/hugo-search-fuse-js"]
+# 	path = themes/hugo-search-fuse-js
+# 	url = https://github.com/kaushalmodi/hugo-search-fuse-js
