--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "themes/hugo-search-fuse-js"]
 	path = themes/hugo-search-fuse-js
 	url = https://github.com/kaushalmodi/hugo-search-fuse-js
+[submodule "hugo-theme-even"]
+	path = hugo-theme-even
+	url = https://github.com/olOwOlo/hugo-theme-even
