--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ title = "Even - A super concise theme for Hugo"
 preserveTaxonomyNames = true
 enableRobotsTXT = true
 enableEmoji = true
-theme = ["hugo-search-fuse-js","even"]
+theme = ["even"]
 enableGitInfo = false # use git commit log to generate lastmod record # 可根据 Git 中的提交生成最近更新记录。
 
 # Syntax highlighting by Chroma. NOTE: Don't enable `highlightInClient` and `chroma` at the same time!
