Restructure and deployed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Start Deployment
         run: |
           chmod +x ./publish_to_ghpages.sh
-          
+          ./publish_to_ghpages.sh
