Restructure and deployed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,3 +29,5 @@ jobs:
         run: |
           chmod +x ./publish_to_ghpages.sh
           ./publish_to_ghpages.sh
+        with:
+          github_token: ${{ secrets.DEPLOY_KEY }}
