--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2.2.1
         with:
-          hugo-version: '0.58.3'
+          hugo-version: "0.58.3"
       - name: Prepare Hugo
         run: |
           git submodule sync && git submodule update --init
@@ -33,3 +33,4 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
           chmod +x ./publish_to_ghpages.sh
           ./publish_to_ghpages.sh
+
